Updated dependencies and simplified configs